# polars_wasm

./: .gitignore  Cargo.toml  deno.json  index.html  main.js  mod.ts  read_csv.html  serve.ts
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
