[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.87"

[dependencies.anyhow]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.chrono-tz]
workspace = true

[dependencies.polars]
workspace = true
default-features = false
features = [
    "csv",
    "lazy",
    "temporal",
    "timezones",
    "dtype-datetime",
]
